src/snapshots/jj_pr__tests__show@jj-pr-dump-1065390.json.snap
---
source: src/tests.rs
expression: render_show(&f)
input_file: src/fixtures/jj-pr-dump-1065390.json
---
○  [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2746PR #2746]8;;[0m  [32mReady[0m  [1m[35mmingwei/sqs-rebase[0m
│  feat(hydro_test): add example of AWS + SQS support
│ [33m⚠[0m  [33mambiguous[0m shared between  (trailer: [1m[36mPR #2801[0m)
│ │  [2m(edit commit description to fix PR: trailer)[0m
│ │ ○    [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2812PR #2812]8;;[0m*  [33mDraft[0m  [1m[35mmingwei/delete-subgraph-id[0m
│ │ ├─╮  refactor(dfir_rs): remove SubgraphId, SubgraphTag, LoopId, LoopTag, simplify StateLifespan
│ │ │ ○  [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2810PR #2810]8;;[0m*  [33mDraft[0m  [1m[35mmingwei/delete-metrics-slotvec[0m
│ │ │ │  refactor(dfir_rs): use slotmap SecondaryMap for metrics
│ │ ○ │  [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2811PR #2811]8;;[0m*  [33mDraft[0m  [1m[35mmingwei/delete-schedule-subgraph-args[0m
│ │ ├─╯  refactor(dfir_rs,dfir_lang): remove SubgraphId argument from schedule_subgraph, remove current_subgraph
│ │ │ ○  [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2829PR #2829]8;;[0m*  [33mDraft[0m  [1m[35mmingwei/singleton-refs-dfir[0m
│ │ ├─╯  refactor(dfir_lang): DFIR singleton references, convert singleton state to plain local variables
│ │ ○  [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2801PR #2801]8;;[0m*  [33mDraft[0m  [1m[35mmingwei/delete-state-api-usage[0m
│ │ │  refactor(dfir_lang): operators capture local state instead of using the state API [ci-bench]
│ │ ○  [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2798PR #2798]8;;[0m*  [32mReady[0m  [1m[35mmingwei/delete-intermediate-subgraph[0m
│ ├─╯  refactor(dfir_lang): double-buffer defer_tick handoffs, remove intermediate subgraphs [ci-bench]
│ [33m⚠[0m  [33mambiguous[0m shared between [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2798PR #2798]8;;[0m (trailer: [1m[36mPR #2798[0m)
├─╯  [2m(ambiguous ownership — abandon stale commits or restructure)[0m
◆  [1m[32mtrunk()[0m
◆  [1m[32mroot()::[0m
