src/snapshots/jj_pr__tests__show@jj-pr-merge-needs-abandon-1778103977.json.gz.snap
---
source: src/tests.rs
expression: render_show(&f)
input_file: src/fixtures/jj-pr-merge-needs-abandon-1778103977.json.gz
---
○  [1m[36m]8;;https://github.com/hydro-project/jj-pr/pull/48PR #48]8;;[0m  [32mReady[0m  [1m[35mnewtypes[0m
│  refactor: add ChangeId and Bookmark newtypes via declarative macro
│ ○  [1m[36m]8;;https://github.com/hydro-project/jj-pr/pull/36PR #36]8;;[0m  [33mDraft[0m  [1m[35mhandle-forks[0m
│ │  Remove bookmark_track from create, update README for fork workflows
│ │ ○  [1m[36m]8;;https://github.com/hydro-project/jj-pr/pull/50PR #50]8;;[0m  [2mMerged[0m  [1m[35mremove-aliases[0m
├───╯  fix: remove broken revset aliases and update README
[1m[36m◆[0m │  [1m[32mtrunk()[0m
├─╯
[2m~[0m  [2m(elided revisions)[0m
