src/snapshots/jj_pr__tests__show@jj-pr.json.gz.snap
---
source: src/tests.rs
expression: render_show(&f)
input_file: src/fixtures/jj-pr.json.gz
---
[1m[36m◆[0m  [1m[32mtrunk()[0m
│ ○  [1m[36m]8;;https://github.com/hydro-project/jj-pr/pull/4PR #4]8;;[0m*  [31mClosed[0m  [1m[35mmingwei/confirm[0m
│ │  Add confirmation prompts to sync, import, and track create
│ │ ○  [1m[36m]8;;https://github.com/hydro-project/jj-pr/pull/5PR #5]8;;[0m*  [33mDraft[0m  [1m[35mmingwei/clickable-pr[0m
│ ├─╯  Make PR # references into clickable URL links in create output
│ ○  [1m[36m]8;;https://github.com/hydro-project/jj-pr/pull/7PR #7]8;;[0m*  [31mClosed[0m  [1m[35mmingwei/pull-parent-pr-out-of-child[0m
│ │  Fix reclaim mode: only activate when tip is foreign-stamped
│ ○  [1m[36m]8;;https://github.com/hydro-project/jj-pr/pull/3PR #3]8;;[0m  [2mMerged[0m  [1m[35mmingwei/pull-parent-pr-out-of-child[0m
├─╯  feat: handle out-of-order PR creation with mode-based trailer walk
[1m[36m◆[0m  [1m[32mroot()::[0m
