src/snapshots/jj_pr__tests__show@stageleft-71.json.gz.snap
---
source: src/tests.rs
expression: render_show(&f)
input_file: src/fixtures/stageleft-71.json.gz
---
[1m[32m@[0m  [1m[36m]8;;https://github.com/hydro-project/stageleft/pull/76PR #76]8;;[0m  [33mDraft[0m  [1m[35mmingwei/fnmut[0m
│  feat: add FnMut support to stageleft splice methods and type hints
○  [1m[36m]8;;https://github.com/hydro-project/stageleft/pull/74PR #74]8;;[0m  [32mReady[0m  [1m[35msandbox-5d382e2d-58bd-43a1-84d8-d42e347b80b5[0m
│  feat(stageleft): fix q! span attribution via hidden macro export
[1m[36m◆[0m  [1m[32mtrunk()[0m
[2m~[0m  [2m(elided revisions)[0m
